# WebCrawler_cURL

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: main.cpp
